@startuml
skinparam Shadowing false
skinparam DefaultFontName Arial
skinparam BackgroundColor white
skinparam ArrowColor #4B5563

hide empty methods
skinparam classAttributeIconSize 0
left to right direction
title CD-04 - Order, Checkout, Payment và Refund
caption Mô tả chuỗi order dine-in, order item, bill payment session, payment record, invoice và cashier\nshift.
skinparam class {
  BackgroundColor white
  BorderColor #374151
  ArrowColor #4B5563
  HeaderBackgroundColor #E5EEF9
}

class "Reservation" as Reservation <<entity>> {
  {static} table = reservations
  --
  reservation_id
  user_id
  applied_user_voucher_id
  row_version
  status
  deposit_status
  deposit_intent_status
}

class "ReservationOrder" as ReservationOrder <<entity>> {
  {static} table = reservation_orders
  --
  order_id
  reservation_id
  created_by
  row_version
  status
  created_at
  updated_at
}

class "ReservationOrderItem" as ReservationOrderItem <<entity>> {
  {static} table = reservation_order_items
  --
  order_item_id
  order_id
  item_id
  row_version
  status
  unit_price
  line_total
}

class "MenuItem" as MenuItem <<entity>> {
  {static} table = menu_items
  --
  item_id
  category_id
  name
  created_at
  updated_at
  code
  description
}

class "ReservationBillPaymentSession" as ReservationBillPaymentSession <<session>> {
  {static} table = reservation_bill_payment_sessions
  --
  bill_payment_session_id
  reservation_id
  order_id
  customer_user_id
  linked_payment_id
  row_version
  idempotency_key
}

class "ReservationDepositPaymentSession" as ReservationDepositPaymentSession <<session>> {
  {static} table = reservation_deposit_payment_sessions
  --
  deposit_payment_session_id
  reservation_id
  customer_user_id
  linked_payment_id
  row_version
  idempotency_key
  session_status
}

class "Payment" as Payment <<ledger>> {
  {static} table = payments
  --
  payment_id
  reservation_id
  refund_of_payment_id
  created_by
  row_version
  idempotency_key
  payment_type
}


class "FinanceReplayRecord" as FinanceReplayRecord <<ledger>> {
  {static} table = finance_replay_records
  --
  finance_replay_record_id
  scope
  aggregate_type
  aggregate_id
  idempotency_key
  request_fingerprint
  result_type
  result_id
}

class "BillingInvoice" as BillingInvoice <<entity>> {
  {static} table = billing_invoices
  --
  billing_invoice_id
  reservation_id
  issued_by
  voided_by
  row_version
  invoice_status
  subtotal_amount
}

class "CashierShift" as CashierShift <<entity>> {
  {static} table = cashier_shifts
  --
  cashier_shift_id
  cashier_user_id
  branch_id
  opened_by
  closed_by
  row_version
  status
}

class "PaymentProviderWebhookReceipt" as PaymentProviderWebhookReceipt <<outbox>> {
  {static} table = payment_provider_webhook_receipts
  --
  payment_provider_webhook_receipt_id
  row_version
  delivery_status
  provider_code
  provider_event_code
  provider_session_code
  request_headers_json
}

class "StaffTableOrderService" as StaffTableOrderService <<control>> {
  orchestrates flow
}

class "StaffOrderItemLifecycleService" as StaffOrderItemLifecycleService <<control>> {
  orchestrates flow
}

class "StaffCheckoutService" as StaffCheckoutService <<control>> {
  orchestrates flow
}

class "OrderSettlementService" as OrderSettlementService <<control>> {
  orchestrates flow
}

class "ReservationFinancialSyncService" as ReservationFinancialSyncService <<control>> {
  orchestrates flow
}

class "ReservationBillPaymentSessionLifecycleService" as ReservationBillPaymentSessionLifecycleService <<control>> {
  orchestrates flow
}

class "ReservationDepositPaymentSessionLifecycleService" as ReservationDepositPaymentSessionLifecycleService <<control>> {
  orchestrates flow
}

Reservation "1" --> "0..*" ReservationOrder : orders\nFK: reservation_id
Reservation "1" --> "0..*" Payment : payments\nFK: reservation_id
Reservation "1" --> "0..*" ReservationDepositPaymentSession : depositPaymentSessions\nFK: reservation_id
Reservation "1" --> "0..1" BillingInvoice : billingInvoice\nFK: reservation_id
ReservationOrder "1" --> "0..*" ReservationOrderItem : items\nFK: order_id
ReservationOrderItem "0..*" --> "1" MenuItem : item\nFK: item_id
ReservationBillPaymentSession "0..*" --> "1" Reservation : reservation\nFK: reservation_id
ReservationBillPaymentSession "0..*" --> "1" ReservationOrder : order\nFK: order_id
ReservationBillPaymentSession "0..*" --> "1" Payment : linkedPayment\nFK: linked_payment_id
ReservationDepositPaymentSession "0..*" --> "1" Payment : linkedPayment\nFK: linked_payment_id
Payment "0..*" --> "1" Payment : refundOfPayment\nFK: refund_of_payment_id
Payment "1" --> "0..*" Payment : refundPayments\nFK: refund_of_payment_id
StaffTableOrderService ..> Reservation : uses
StaffOrderItemLifecycleService ..> Reservation : uses
StaffCheckoutService ..> Reservation : uses
OrderSettlementService ..> Reservation : uses
ReservationFinancialSyncService ..> Reservation : uses
ReservationBillPaymentSessionLifecycleService ..> Reservation : uses
ReservationDepositPaymentSessionLifecycleService ..> Reservation : uses
@enduml
